<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.booking.activities.BookingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"/>
        </android.support.design.widget.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bookingTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/hint_bookingTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bookingCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/hint_bookingCompany"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bookingContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/hint_bookingContact"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bookingMentor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:hint="@string/hint_bookingMentor"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"/>

                <EditText
                    android:id="@+id/bookingDate"
                    android:hint="@string/hint_bookingDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:inputType="date" />

                <EditText
                    android:id="@+id/bookingTime"
                    android:hint="@string/hint_bookingTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_margin="6dp"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:inputType="time" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/bookingNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:ems="10"
                    android:hint="@string/hint_bookingNotes"
                    android:inputType="textMultiLine"
                    android:maxLength="200"
                    android:padding="6dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/chooseImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:text="@string/button_addImage"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/bookingImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="picture" />

                <Button
                    android:id="@+id/bookingLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/colorAccent"
                    android:paddingBottom="6dp"
                    android:paddingTop="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_location"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:background="@color/colorAccent"
                    android:paddingTop="6dp"
                    android:paddingBottom="6dp"
                    android:stateListAnimator="@null"
                    android:text="@string/button_addBooking"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>